# aca

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
apps/: CMakeLists.txt  app-bu.cpp  app-cuda.cpp  app-thrust.cpp  app.cc  app.cpp  app2.cpp  file_utils.cpp  file_utils.h
apps/iterative/: CMakeLists.txt  cuda_check.h  qt_it_cpu.cu  qt_it_gpu.cu
apps/recursive/: CMakeLists.txt  qt_rec.cpp  qt_rec_bu.cpp  qt_rec_td.cpp
benchmark/: benchmark_device.py  benchmark_host_iter.py  benchmark_host_rec_bu.py  benchmark_host_rec_td.py  pbs_bash  requirements.txt  util.py
cmake/: toolchain-hpc.cmake
include/: image.h  image.hpp  quadtree.hpp  rgb.hpp
src/: CMakeLists.txt  colorizer.cpp  colorizer.h  file_utils.h  flatten.h  hello.cc  hello.cpp  image.cc  image.cpp  old_quadtree.hpp  overloaded.h  printer.h  quadtree.cpp  quadtree_logger.h  quadtree_with_eigen.cpp  quadtree_with_eigen.h  rgb.cpp
src-cuda/: CMakeLists.txt  app-cuda.cu
src/colorizer/: CMakeLists.txt  colorizer.cpp  colorizer.h
src/construction/: bottom_up.cpp  top_down.cpp
src/cuda_quadrant/: CMakeLists.txt  cuda_quadrant.cu  cuda_quadrant.cuh
src/cuda_soa/: CMakeLists.txt  cuda_soa.cu  cuda_soa.cuh
src/eigen_quadrant/: CMakeLists.txt  eigen_quadrant.cpp  eigen_quadrant.h
src/eigen_quadtree/: CMakeLists.txt  eigen_quadtree.cpp  eigen_quadtree.h
src/eigen_soa/: CMakeLists.txt  eigen_soa.cpp  eigen_soa.h
src/flattener/: CMakeLists.txt  flattener.cpp
src/io/: CMakeLists.txt  io.cpp  io.h
src/iterative/: CMakeLists.txt
src/iterative/colorization/: CMakeLists.txt  colorization.cpp  colorization.h
src/iterative/construction/: CMakeLists.txt  combination.cu  combination.h  construction_device.cu  construction_device.cuh  construction_host.cpp  construction_host.h
src/iterative/node/: CMakeLists.txt  node.cu  node.h
src/iterative/rgb/: CMakeLists.txt  rgb.h
src/old_quadtree/: CMakeLists.txt  old_quadtree.cpp  rgb.hpp
src/quadrant/: CMakeLists.txt  quadrant.h
src/quadtree/: CMakeLists.txt  bottom_up.h  quadrant.h  quadtree.cpp  quadtree.h  rgb.h  top_down.h
src/quadtree/logger/: quadtree_logger.cpp  quadtree_logger.h
src/recursive/: CMakeLists.txt  overloaded.h
src/recursive/colorization/: CMakeLists.txt  colorization.cpp  colorization.h
src/recursive/construction/: CMakeLists.txt  bottom_up.cpp  bottom_up.h  top_down.cpp  top_down.h
src/recursive/quadrant/: CMakeLists.txt  aos_ops.cpp  aos_ops.h  quadrant.cpp  quadrant.h  quadrant_aos.cpp  quadrant_aos.h  quadrant_soa.cpp  quadrant_soa.h  soa_ops.cpp  soa_ops.h
src/recursive/quadtree/: CMakeLists.txt  quadtree.cpp  quadtree.h
src/recursive/rgb/: rgb.h  rgbsoa.cpp
src/recursive/utils/: padding.h
src/rgb/: CMakeLists.txt  rgbaos.cpp  rgbaos.h  rgbsoa.cpp  rgbsoa.h
src/thrust_quadrant/: CMakeLists.txt  thrust_quadrant.cu  thrust_quadrant.cuh
src/thrust_soa/: CMakeLists.txt  thrust_soa.cu  thrust_soa.cuh
src/util/: CMakeLists.txt  padding.cpp  padding.h  qtmath.cu  qtmath.h
src/utils/: CMakeLists.txt  padding.cpp  padding.h
