add_library(fileutils file_utils.cpp file_utils.h)
target_link_libraries(fileutils PUBLIC stb::stb)


add_executable(app app.cpp)
add_executable(app-bu app-bu.cpp)
#add_executable(app-thrust app-thrust.cpp)

target_include_directories(app PUBLIC fileutils)
target_link_libraries(app PRIVATE eigen_soa)
target_link_libraries(app PRIVATE quadtree)
target_link_libraries(app PRIVATE eigen_quadrant)
target_link_libraries(app PRIVATE colorizer)

target_include_directories(app-bu PUBLIC fileutils)
target_link_libraries(app-bu PRIVATE eigen_soa)
target_link_libraries(app-bu PRIVATE quadtree)
target_link_libraries(app-bu PRIVATE eigen_quadrant)
target_link_libraries(app-bu PRIVATE colorizer)

#target_include_directories(app-thrust PRIVATE "${stb_SOURCE_DIR}")
#target_link_libraries(app-thrust PRIVATE thrust_soa)
#target_link_libraries(app-thrust PRIVATE quadtree)
#target_link_libraries(app-thrust PRIVATE thrust_quadrant)
#target_link_libraries(app-thrust PRIVATE colorizer)


if (TIME_READ_FILE)
    target_compile_definitions(app PRIVATE TIME_READ_FILE)
    target_compile_definitions(app-bu PRIVATE TIME_READ_FILE)
    #    target_compile_definitions(app-thrust PRIVATE TIME_READ_FILE)
endif ()
if (TIME_SOA)
    target_compile_definitions(app PRIVATE TIME_SOA)
    target_compile_definitions(app-bu PRIVATE TIME_SOA)
    #    target_compile_definitions(app-thrust PRIVATE TIME_SOA)
endif ()
if (LOG_QUADTREE_BUILD)
    target_compile_definitions(app PRIVATE LOG_QUADTREE_BUILD)
    target_compile_definitions(app-bu PRIVATE LOG_QUADTREE_BUILD)
    #    target_compile_definitions(app-thrust PRIVATE LOG_QUADTREE_BUILD)
endif ()
if (TIME_QUADTREE_BUILD)
    target_compile_definitions(app PRIVATE TIME_QUADTREE_BUILD)
    target_compile_definitions(app-bu PRIVATE TIME_QUADTREE_BUILD)
    #    target_compile_definitions(app-thrust PRIVATE TIME_QUADTREE_BUILD)
endif ()
if (TIME_COLORIZE)
    target_compile_definitions(app PRIVATE TIME_COLORIZE)
    target_compile_definitions(app-bu PRIVATE TIME_COLORIZE)
    #    target_compile_definitions(app-thrust PRIVATE TIME_COLORIZE)
endif ()
if (TIME_WRITE_FILE)
    target_compile_definitions(app PRIVATE TIME_WRITE_FILE)
    target_compile_definitions(app-bu PRIVATE TIME_WRITE_FILE)
    #    target_compile_definitions(app-thrust PRIVATE TIME_WRITE_FILE)
endif ()