add_executable(app app.cpp)
#add_executable(app-thrust app-thrust.cpp)

target_link_libraries(app PRIVATE argparse::argparse)
target_link_libraries(app PRIVATE spdlog::spdlog)
target_compile_definitions(app PUBLIC STB_IMAGE_IMPLEMENTATION)
target_compile_definitions(app PUBLIC STB_IMAGE_WRITE_IMPLEMENTATION)
target_link_libraries(app PRIVATE stb::stb)
target_link_libraries(app PRIVATE eigen_soa)
target_link_libraries(app PRIVATE quadtree)
target_link_libraries(app PRIVATE eigen_quadrant)
target_link_libraries(app PRIVATE colorizer)

#target_include_directories(app-thrust PRIVATE "${stb_SOURCE_DIR}")
#target_link_libraries(app-thrust PRIVATE thrust_soa)
#target_link_libraries(app-thrust PRIVATE quadtree)
#target_link_libraries(app-thrust PRIVATE thrust_quadrant)
#target_link_libraries(app-thrust PRIVATE colorizer)
